<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/name_users"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <!-- el hint sirve para decirle
     al usuario para que sirve el input y que datos debe ingresar-->
    <EditText
        android:id="@+id/txtuser1"
        android:layout_width="300dp"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:importantForAutofill="no"
        android:hint="@string/hint_user1"
        android:inputType="text"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/txtuser2"
        android:layout_width="300dp"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:importantForAutofill="no"
        android:hint="@string/hint_user2"
        android:inputType="text"
        android:textAlignment="center"

        />

    <Button
        android:id="@+id/btn_jugar"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_jugar"
        android:textSize="24sp"
        />

</LinearLayout>