<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/azul"
    tools:context=".SelectGame">

    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textStyle="bold"
    />

    <Button
        android:id="@+id/btn_select"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_select"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/btn_select_hockey"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:text="@string/btn_hockey"
        />
</LinearLayout>